--- a/ghostty.conf
+++ b/ghostty.conf
@@ -21,3 +21,7 @@ palette = 12=#cdcfe4
 palette = 13=#e9d7e9
 palette = 14=#e2e6ee
 palette = 15=#fcf3ec
+
+# Selection colors
+selection-foreground = #fcf3ec
+selection-background = #3d3d64
